# svg_model

./: README.md  pyproject.toml
docs/: conf.py  index.rst  model.rst
gliske/: model.py
svg_model/: __init__.py  model.py
