[tool.poetry]
name = "svg_model"
version = "0.1.0"
description = ""
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
brian2 = "^2.4.2"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
sphinx = "^3.5.2"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
